# pyutils2

./: .clang-format  .gitignore  pyproject.toml  setup.py
.github/workflows/: sphinx-build.yml
docs/: requirements.txt
docs/source/: 3rd_paties.rst  args.rst  conf.py  index.rst  log.rst  scripts.rst
docs/source/api/: pyutils.numpy.rst  pyutils.rst  pyutils.torch.rst
docs/source/io/: index.rst
docs/source/torch/: index.rst
docs/source/wolfram/: index.rst
examples/pytorch/: dectect.ipynb
examples/quantum/: bloch_sphere.ipynb
pyutils/: __init__.py
pyutils/base/: __init__.py  arg.py  classopt.py  dict.py  expr.py  list.py  log.py  path.py  re.py  set.py
pyutils/io/: __init__.py  hdf5.py  json.py  tensorboard.py
pyutils/matplotlib/: __init__.py  color_data.py
pyutils/plot/: __init__.py
pyutils/pytorch/: __init__.py  common.py  detect.py  device.py  model.py
pyutils/quantum/: __init__.py  qubit.py
pyutils/torch/: __init__.py  block_shuffle.py  common.py  detect.py  device.py  metric.py  model.py
pyutils/torch/models/real_nvp/: coupling_layer.py  real_nvp_loss.py  residual_block.py
pyutils/torch/models/transformer/: positonal_encoding.py
pyutils/torch/pl_modules/Classification/: EmpiricalRiskMinimization.py
pyutils/torch/real_nvp/: real_nvp.py  resnet.py
pyutils/torch/real_nvp/util/: __init__.py
pyutils/wolfram/: __init__.py
scripts/: pyutils_print_h5.py  pyutils_print_json.py
src/: block_shuffle.cpp  block_shuffle.hpp  cppext.cpp  pybind11.hpp
tests/: test_qubit.py
