# Python project metadata that makes it installable. 
# Useful for automatic documentation generation from sources.
# [build-system]
# requires = ["flit_core >=3.2,<4"]
# build-backend = "flit_core.buildapi"

[project]
name = "pyutils"
authors = [{name = "Anke Tang", email = "tang.anke@foxmail.com"}]
dynamic = ["version", "description"]

[project.urls]
"Homepage"="https://github.com/tanganke/pyutils"

[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"
